tests/semantic/fail/assignment1.tiger
let
	var x : int := 1
in
  x := 1 + "a"
end
